--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@ permalink: /
 
 <link rel="stylesheet" href="/css/main.css">
 
-<section class="mb-5 mt-5 mt-md-8 mb-xxl-8 lib-wrap">
+<section class="mb-5 mt-md-7 mt-5 mb-xxl-8 lib-wrap">
   <div class="container" style="max-width: 980px">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-3">
       <div class="col-lg-4 col-md-6 mb-3 mb-md-4 lib-item">
         <div class="input-group bg-light">
           <div class="input-group-prepend">
-            <div class="input-group-text bg-light">
+            <div class="input-group-text bg-light pr-3">
               <img src="/img/search.svg" width="14" height="14" alt="">
             </div>
           </div>
           <input 
             id="searchInput"
-            class="form-control" 
+            class="form-control pl-0" 
             type="search" 
-            placeholder="Search by name" 
+            placeholder="Search by name..." 
             aria-label="Search"
             oninput="filterByThemeProj()"
             >
