--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ permalink: /
 
 <link rel="stylesheet" href="/css/main.css">
 
-<section class="mb-5 mt-md-7 mt-5 mb-xxl-8 lib-wrap">
+<section class="pb-5 pt-md-7 pt-5 pb-xxl-8 lib-wrap">
   <div class="container" style="max-width: 980px">
     <div class="row justify-content-center mb-3">
       <div class="col-lg-4 col-md-6 mb-3 mb-md-4 lib-item">
