--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ permalink: /
           <div class="card h-100 rounded-0 card-shadow">
             <div class="card-body pb-0 px-4 pt-4">
               <div>
-                <img src="img/{{ item.badge_name }}.svg" alt="{{ item.Library_name }}" style="width: 40px; height: 40px;">                
+                <img src="img/{{ item.image_name }}.svg" alt="{{ item.Library_name }}" style="width: 40px; height: 40px;">                
               </div>
               <p class="text-20 mt-3 mb-4 font-weight-normal lib-name">{{ item.Library_name }}</p>
               <p class="font-weight-light text-14 mb-2 github-desc">{{ item.Text_in_it }}</p>
