--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ permalink: /
 {% assign item_themes = item.Theme | split: ", "%}
 {% assign item_projects = item.Project | split: ", "%}
   {% for theme in item_themes %}
-    {% capture currentTheme%}{{ theme | replace: ' ', '-' }}, {% endcapture %}
+    {% capture currentTheme%}{{ theme | strip | replace: ' ', '-' }}, {% endcapture %}
     {% assign allThemes = allThemes | append: currentTheme %}
   {% endfor %}
 
   {% for project in item_projects %}
-    {% capture currentProject%}{{ project | replace: ' ', '-' }}, {% endcapture %}
+    {% capture currentProject%}{{ project | strip | replace: ' ', '-' }}, {% endcapture %}
     {% assign allProjects = allProjects | append: currentProject %}
   {% endfor %}
 {% endfor %} 
@@ -71,28 +71,28 @@ permalink: /
       </div>
     </div>
     <div class="row justify-content-center justify-content-lg-start" id="libWarp">
-      {% assign libs = site.data.open-sources-libs | sort: "Library_name" %}
+      {% assign libs = site.data.open-sources-libs | sort_natural: "Library_name" %}
       {% for item in libs %}
       {% assign item_themes = item.Theme | split: ","%}
       {% assign item_projects = item.Project | split: ","%}
       {% assign currentThemes = '' %}
       {% assign currentProjects = '' %}
         {% for theme in item_themes %}
-          {% capture currentTheme%}theme-{{ theme | replace: ' ', '-' }} {% endcapture %}
+          {% capture currentTheme%}theme-{{ theme | strip | replace: ' ', '-' }} {% endcapture %}
           {% assign currentThemes = currentThemes | append: currentTheme %}
         {% endfor %}
 
         {% for project in item_projects %}
-          {% capture currentProject%}project-{{ project | replace: ' ', '-' }} {% endcapture %}
+          {% capture currentProject%}project-{{ project | strip | replace: ' ', '-' }} {% endcapture %}
           {% assign currentProjects = currentProjects | append: currentProject %}
         {% endfor %}
 
         <div class="col-lg-4 col-md-6 mb-3 mb-md-4 lib-item {{currentThemes}} {{currentProjects}}">
           <div class="card h-100 rounded-0 card-shadow">
             <div class="card-body pb-0 px-4 pt-4">
-              <div>
+              <a href="{{ item.Github_Link }}" class="hoverable-i">
                 <img src="img/{{ item.image_name }}.svg" alt="{{ item.Library_name }}" style="width: 40px; height: 40px;">                
-              </div>
+              </a>
               <p class="text-20 mt-3 mb-4 font-weight-normal lib-name">{{ item.Library_name }}</p>
               <p class="font-weight-light text-14 mb-2 github-desc">{{ item.Text_in_it }}</p>
               
