--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ permalink: /
         <div class="col-lg-4 col-md-6 mb-3 mb-md-4 lib-item {{currentThemes}} {{currentProjects}}">
           <div class="card h-100 rounded-0 card-shadow">
             <div class="card-body pb-0 px-4 pt-4">
-              <a href="{{ item.Github_Link }}" class="hoverable-i">
+              <a href="{{ item.Github_Link }}" class="hoverable-i text-secondary">
                 <img src="img/{{ item.image_name }}.svg" alt="{{ item.Library_name }}" style="width: 40px; height: 40px;">                
+                <p class="text-20 mt-3 mb-4 font-weight-normal lib-name">{{ item.Library_name }}</p>
               </a>
-              <p class="text-20 mt-3 mb-4 font-weight-normal lib-name">{{ item.Library_name }}</p>
               <p class="font-weight-light text-14 mb-2 github-desc">{{ item.Text_in_it }}</p>
               
             </div>
