--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ permalink: /
                 </a>
                 {% endfor %}
               </p>
-              <p class="mb-2">
+              <p class="mb-2" style="min-height: 50px;">
                 <a href="{{ item.Github_Link }}" class="mr-4 hoverable-i">
                   <img width="17" height="17" src="{{'/img/Github.svg' | relative_url }}" alt="{{ item.Library_name }} Github repository">
                 </a>
